--- a/index.htm
+++ b/index.htm
@@ -42,20 +42,21 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        overflow: hidden;        /* Evita que se desborde el video/canvas */
-        }
+        overflow: hidden;       
+    }
 
         #video {
+        background: #000;
         width: 100%;
         height: 100%;
-        object-fit: cover;       /* Hace que el video se ajuste sin deformarse */
+        object-fit: cover;       
         }
 
         #overlay {
-        position: absolute;      /* Se superpone al video */
+        position: absolute;     
         top: 0;
         left: 0;
-        width: 100%;             /* Igual tamaño que el video */
+        width: 100%;            
         height: 100%;
         pointer-events: none;    /* El canvas no bloquea clics */
         }
@@ -122,7 +123,7 @@
   background: #000; /* fondo de respaldo */
 }
 
-/* El video que inyecta html5-qrcode */
+/* El  que inyecta html5-qrcode */
 #qrVideo {
   position: absolute;
   top: 0;
