--- a/index.htm
+++ b/index.htm
@@ -218,7 +218,7 @@
   <div id="camModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:1001;">
   <div style="background:#fff; padding:20px; border-radius:10px; width:400px;">
     <h3>Seleccionar Cámaras</h3>
-    <div>
+    <div hidden>
       <label for="faceCamSelect">Cámara Rostros:</label>
       <select id="faceCamSelect"></select>
     </div>
